2008-12-23  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* index.php: Cleaned up some old stuff and fixed the order of GET/POST
	
	* general/header.php: Added tags for custom branding and todo
	
	* general/login_page.php: Cleaned up some old stuff and fixed always
	redirecting the user to the overview if they followed a link.

2008-12-23  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/configurar_agente.php: Properly insert the custom ID
	  when creating the keepalive module (there was a typo).

2008-12-23  Evi Vanoost <vanooste@rcbi.rochester.edu

	* include/functions.php: Fixed format_numeric in case there are characters
	in a number or the number is not a number. Fixes notices from fmod.

2008-12-23  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql, include/config.php, pandoradb.sql,
	  godmode/groups/configure_group.php,
	  godmode/groups/group_list.php,
	  godmode/agentes/module_manager_editor_network.php,
	  godmode/agentes/module_manager_editor_wmi.php,
	  godmode/agentes/module_manager_editor_plugin.php,
	  godmode/agentes/module_manager_editor_prediction.php,
	  godmode/agentes/module_manager_editor_data.php,
	  godmode/agentes/configurar_agente.php,
	  godmode/agentes/module_manager_editor.php,
	  godmode/agentes/agent_manager.php: Added support for a custom ID to
	  agents, modules and groups.

2008-12-22  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* godmode/agentes/agent_template.php: Rewritten to use new functions
	
	* godmode/agentes/configurar_agente.php: Fixed adding empty ips
	
	* godmode/db/db_purge.php: Fixed bug #2445819 ?

	* godmode/db/db_refine.php: Rewritten to use new functions. Fixed bug 
	#2445819 ?

2008-12-22  Jorge Gonzalez  <jorgegonz@artica.es>

	* pandoradb_data.sql: Added Dutch to translations.

	* include/languages/Makefile: Added Dutch to translations.

	* include/languages/index.pot: Updated po template file.

	* include/languages/cs.po, include/languages/pt_BR.po, 
	include/languages/pl.mo, include/languages/it.mo, 