@@ -17,7 +17,6 @@
 // Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 
-
 // Load global vars
 require("include/config.php");
 
@@ -36,11 +35,18 @@ echo "<table width=95%>";
 echo "<tr><td valign='top'>";
 echo "<h3>".__('Event graph')."</h3>";
 echo '<img src="reporting/fgraph.php?tipo=total_events&width=300&height=200" border=0>';
-echo "<td valign='top'>";
+echo "</td><td valign='top'>";
 echo "<h3>".__('Event graph by user')."</h3>";
 echo '<img src="reporting/fgraph.php?tipo=user_events&width=300&height=200" border=0>';
+echo "</td></tr>";
 echo "<tr><td>";
+if (isset($_GET["test"])){
+	echo "<h3>".__('Event graph by group')."</h3>";
+	echo '<img src="reporting/fgraph2.php?tipo=group_events&width=300&height=200" border=0>';
+	echo "</td><td>";
+}
 echo "<h3>".__('Event graph by group')."</h3>";
 echo '<img src="reporting/fgraph.php?tipo=group_events&width=300&height=200" border=0>';
+echo '</td></tr>';
 echo "</table>";
 ?>
